# GRPO

./: .gitignore  README.md  check_ollama_models.py  debug_notebook.py  pyproject.toml  requirements.txt  test_ollama.py  test_pretrained.py  test_qwen_ollama.py
dataset/augmented/: test.json  train.json
examples/: kinship_example.py
notebooks/: sft_training.ipynb
outputs/: ollama_test_results.json  qwen2_7b_test_results.json
scripts/: plot_sft_loss.py  train_grpo.py  train_grpo_kinship.py  train_sft_kinship.py
src/: config.py
src/data/: __init__.py  kinship.py  kinship_augment.py
src/grpo/: __init__.py  core.py  generator.py  reward.py  trainer.py
src/sft/: __init__.py  dataset.py  trainer.py  utils.py
src/utils/: __init__.py  model_utils.py
